apps/atproto-pds/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pds
  namespace: atproto
spec:
  type: ClusterIP
  selector:
    app: pds
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
